--- a/app/components/GameBoard.module.css
+++ b/app/components/GameBoard.module.css
@@ -12,6 +12,12 @@
                 right: 0;
                 height: 100%;
                 width: 100%;
+                background: transparent;
+
+                &:hover {
+                    background: rgba(0, 0, 0, 0.1);
+                    cursor: pointer;
+                }
             }
         }
     }
