--- a/app/components/GameBoard.module.css
+++ b/app/components/GameBoard.module.css
@@ -14,7 +14,7 @@
                 width: 100%;
                 background: transparent;
 
-                &:hover {
+                &:hover:not(:disabled) {
                     background: rgba(0, 0, 0, 0.1);
                     cursor: pointer;
                 }
