--- a/app/components/SingleGame/SingleGame.module.css
+++ b/app/components/SingleGame/SingleGame.module.css
@@ -45,3 +45,18 @@
     }
     
 }
+
+
+.selectGameButton {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background: transparent;
+
+    &:hover:not(:disabled) {
+        background: rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+    }
+}
