--- a/app/components/SingleGame/SingleGame.module.css
+++ b/app/components/SingleGame/SingleGame.module.css
@@ -18,6 +18,7 @@
         text-align: center;
         line-height: 50px;
         font-size: 24px;
+        background-color: transparent;
     }
 
     & .winnerOverlay {
