feat: multiplayer chat

--- a/app/styles/globalOverrides.css
+++ b/app/styles/globalOverrides.css
@@ -1,4 +1,7 @@
 html, body {
     background: var(--color-background);
     color: var(--color-text);
+    font-family: var(--font-family);
+    margin: 0px;
+    padding: 0px;
 }
