--- a/app/components/SuperTicTacToe.module.css
+++ b/app/components/SuperTicTacToe.module.css
@@ -2,5 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+}
+
+.gameChoices {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    & a {
+        text-decoration: none;
+        border-radius: 4px;
+        padding: 10px;
+        background-color: var(--dim-gray);
+        border: 1px solid var(--black);
+        color: var(--platinum);
+
+        &:hover {
+            background-color: var(--black);
+        }
+    }
 }
